--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,6 +1,7 @@
 
 User: <%= @user.handlename%>
 Tweet: <%= @tweet.tweet %><br>
+<%= image_tag @restaurant.image, width: '500px' %>
 <br />
 
 <%= link_to 'Back to index', tweets_path %>
