--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -12,7 +12,7 @@
   <%= f.text_field :tweet %>
   
   <%= f.label :image, "Photo" %>
-  <%= image_tag @restaurant.image, width: '300px' if @restaurant.image? %>
+  <%= image_tag @tweet.image, width: '300px' if @tweet.image? %>
   <%= f.file_field :image %>
 
   <%= f.submit %>
