--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <% @tweets.each do |tweet| %>
   <li>
-    <%= tweet.name %>
+    <%= tweet.tweet %>
     <%= link_to 'Show', tweet_path(tweet) %>
     <%= link_to 'Edit', edit_tweet_path(tweet) %>
     <%= link_to 'Delete', tweet_path(tweet), method: :delete, data: {confirm:"Are you sure?"} %>
