--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,5 +1,5 @@
 
-User: <%= current_user.handlename %>
+User ID: <%= @tweet.user_id %>
 Tweet: <%= @tweet.tweet %><br>
 <%= image_tag @tweet.image, width: '500px' %>
 <br />
