--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,120 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+   margin: 0;
+   background-color: #f5f8fa;
+ }
+
+ .main-page-container {
+  display: grid;
+  height: 100vh;
+  background-image: url('sign-up-background');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "body login"
+                       "body signup"
+                       "body footer"
+ }
+
+.main-page-body {
+  grid-area: body;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.main-page-body-p{
+  position: relative;
+  font-weight: 700;
+  font-size: 2em;
+  margin: 0 0 0 8vw;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.main-page-login{
+  position: relative;
+  grid-area: login;
+  height: 30vh;
+  display: flex;
+  justify-content: center;  
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-page-login-banner{
+  position: relative;
+  background-color: orange;
+  padding: 3vh 1vw 2vh 1vw;
+  border-radius: 1em;
+  width: 28vw;
+  justify-content: center;
+  display: flex;
+}
+
+.main-page-login-textbox{
+  position: relative;
+  padding: 0.5em;
+  font-size: 1em;
+  font-weight: 500;
+}
+
+.main-page-login-p{
+  margin: 0;
+}
+
+.main-page-login-button{
+  position: relative;
+  height: 2.8em;
+  background-color:lightblue;
+  border-color: blue;
+}
+
+.main-page-signup{
+  position: relative;
+  grid-area: signup;
+  height: 42vh;
+  display: flex;
+  justify-content: center; 
+ }
+
+.main-page-signup-banner{
+  position: relative;
+  background-color: orange;
+  padding: 2vh 1vw 2vh 1vw;
+  border-radius: 1em;
+  width: 28vw;
+  align-items: center;
+ }
+
+ .main-page-signup-banner-h2{
+  margin: 0 1em 0 1em;
+  font-family: Arial, Helvetica, sans-serif;
+ }
+
+ .main-page-signup-banner-form{
+  margin: 0 1em 0 1em;
+ }
+
+ .main-page-footer{
+   height: 28vh;
+ }
+
+ .forgetpw-page{
+  position: relative;
+  grid-area: signup;
+  height: 32vh;
+  display: flex;
+  justify-content: center; 
+ }
+ 
+ .login-error-banner{
+  position: relative;
+  background-color: orange;
+  padding: 0vh 1vw 0vh 1vw;
+  border-radius: 1em;
+  width: 28vw;
+}
