--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,213 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-index-container{
+  margin-top: 1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 2.5fr 0.8fr 1fr;
+  grid-template-areas: "lws avatar tweets navigation rws"
+                       "lws trending tweets followers rws"
+}
+
+.avatar-col{
+  grid-area: avatar;
+  background-color: orange;
+  padding: 1em;
+  border-radius: 2em;
+}
+
+.avatar-pic{
+  border: 10px;
+  height: 120px;
+  width: 120px;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+
+.avatar-name{
+  padding: 0.2em;
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.avatar-handlename{
+  padding: 0.2em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.edit-profile-container{
+  display: grid;
+  display: flex;
+  justify-content: center;
+  height: 45vh;
+  width: 100vw;
+  margin-top: 15vh;
+  grid-template-columns: 1fr;
+  grid-template-areas: "pdetails"
+}
+
+.edit-profile-pdetails{
+  grid-area: pdetails;
+  background-color: orange;
+  padding: 1em;
+  border-radius: 2em;
+}
+
+.edit-profile-td{
+  font-size: 1.3em;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-right: 1.1em;
+}
+
+.edit-profile-buttons{
+  font-weight: 900;
+  height: 2em;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.3);
+}
+
+.modal-content {
+  margin: 0 50vw 0 50vw;
+  justify-content: center;
+  display: flex;
+}
+
+.edit-profile-btn{
+  padding: 0.2em 1em 0.2em 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  font-size: 1em;
+  border-radius: 0.5em;
+  border: none;
+  background-color: lightblue;
+}
+
+.trending-col{
+  grid-area: trending;
+  background-color: orange;
+  margin-top: 2vh;
+  border-radius: 2em;
+  padding-bottom: 2em;
+}
+
+.trending-col-header{
+  margin:0;
+  text-align: center;
+  padding: 0.5em;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+}
+
+.trending-col-k{
+  background-color: white;
+  margin: 0;
+  padding: 0.5em 1.2em 0em 1.2em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2em;
+  color: #43a0e7;
+}
+
+.trending-col-v{
+  background-color: white;
+  margin: 0;
+  padding: 0 1.5em 0.5em 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.tweets-col{
+  grid-area: tweets;
+  margin: 0 1vw 0 1vw;
+  background-color: white;
+  padding: 1em;
+  border-radius: 2em;
+}
+
+.notice{
+  text-align: center;
+  background-color: lightgreen;
+  padding: 0.5em;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 0.5em;
+}
+
+.alert{
+  text-align: center;
+  background-color: lightcoral;
+  padding: 0.5em;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 0.5em;
+}
+
+.nav-col{
+  grid-area: navigation;
+  background-color: orange;
+  margin-bottom: 2em;
+  border-radius: 2em;
+  text-align: center;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: lightblue;
+  padding: 0.5em 2.5em 0.5em 2.5em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  border: none;
+  border-radius: 0.5em;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  text-decoration: none;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  padding: 0 2em 0 2em;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #1E90FF}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #1E90FF;
+}
+
+.followers-col {
+  grid-area: followers;
+  background-color: orange;
+  padding: 1em;
+}
