--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,38 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="main-page-container">
+  <div class="main-page-body">
+    <p class="main-page-body-p">Hola! Welcome to Twit-a-clone</p>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="main-page-login">
+    &nbsp
   </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+  <div class="forgetpw-page">
+    <div class="main-page-signup-banner">
+      <div class="main-page-signup-banner-h2">
+        <h2>Forget your password?</h2>
+        <h3>Please provide your Email address into the textbox below</h3>
+        <h4>Please check your Email for password reset instructions</h4>
+
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
+
+      <p class="main-page-login-p">
+        <%= f.email_field :email, autofocus: true, class: "main-page-login-textbox", placeholder: "Please provide Email" %>
+        <%= f.submit "Reset password", class: "main-page-login-button" %>
+      </p>
+      <% end %>
+
+      </br>
+
+      <%= link_to "Back to Login page", new_session_path(resource_name) %>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="main-page-footer">
+    &nbsp
+  </div>
+
+</div>
