--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,54 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name  %>
+<div class="main-page-container">
+  <div class="main-page-body">
+    <p class="main-page-body-p">Hola! Welcome to Twit-a-clone</p>
   </div>
 
-  <div class="field">
-    <%= f.label :handlename %><br />
-    <%= f.text_field :handlename  %>
+  <div class="main-page-login">
+    <div class="login-error-banner">
+      
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <% end %>
+
+   </div>
+  </div>  
+
+  <div class="main-page-signup">
+    <div class="main-page-signup-banner">
+      <div class="main-page-signup-banner-h2">
+        <h2>See What's happening in the world right now</h2>
+        <h2>Sign up today!</h2>
+      </div>
+      
+      <div class="main-page-signup-banner-form">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <p class="main-page-login-p">
+          <%= f.text_field :name, placeholder: "Name", class: "main-page-login-textbox" %>
+          <%= f.text_field :handlename, placeholder: "Twitter username @", class: "main-page-login-textbox" %>
+        </p>
+
+        <br>
+
+        <p class="main-page-login-p">
+          <%= f.email_field :email, autofocus: true, placeholder: "E-mail", class: "main-page-login-textbox" %>
+        </p>
+
+        <p class="main-page-login-p">
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+
+          <%= f.password_field :password, autocomplete: "off", placeholder: "Password (6 char min)", class: "main-page-login-textbox" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Re-enter Password", class: "main-page-login-textbox" %>
+        </p>
+
+      </br>
+        <%= f.submit "Sign up", class: "main-page-login-button" %>
+        <% end %>
+      </div>
+
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+ </div>
