--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -46,6 +46,8 @@
 
     <%= link_to 'New Tweet', new_tweet_path %>
 
+    <%= render partial: "tweets/index" %>
+
   </div>
 
   <div class="nav-col">
