created cards for tweets

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -44,9 +44,7 @@
       <div class="alert"><%= flash[:alert] %></div>
     <% end %>
 
-    <%= link_to 'New Tweet', new_tweet_path %>
-
-    <%= render partial: "tweets/index" %>
+    <%= render partial: "tweetslist" %>
 
   </div>
 
