Search done, UI updated

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,7 @@
  *= require_self
  */
 
- body{
-   margin: 0;
+ .body-color{
    background-color: #f5f8fa;
  }
 
@@ -25,8 +24,8 @@
   background-image: url('sign-up-background');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  grid-template-columns: 1fr 1fr;
+  background-position: center center;
+  grid-template-columns: 2fr 3fr;
   grid-template-areas: "body login"
                        "body signup"
                        "body footer"
@@ -40,10 +39,9 @@
 }
 
 .main-page-body-p{
-  position: relative;
   font-weight: 700;
   font-size: 2em;
-  margin: 0 0 0 8vw;
+  margin: 0 5vw 0 7vw;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -62,7 +60,7 @@
   background-color: orange;
   padding: 3vh 1vw 2vh 1vw;
   border-radius: 1em;
-  width: 28vw;
+  width: 550px;
   justify-content: center;
   display: flex;
 }
@@ -72,6 +70,7 @@
   padding: 0.5em;
   font-size: 1em;
   font-weight: 500;
+  width: 220px;
 }
 
 .main-page-login-p{
@@ -96,10 +95,19 @@
 .main-page-signup-banner{
   position: relative;
   background-color: orange;
-  padding: 2vh 1vw 2vh 1vw;
+  padding: 2vh 1.5vw 2vh 1.5vw;
   border-radius: 1em;
-  width: 28vw;
-  align-items: center;
+  width: 550px;
+  height: 410px;
+ }
+
+ .main-page-signup-pw-banner{
+  position: relative;
+  background-color: orange;
+  padding: 2vh 1.5vw 2vh 1.5vw;
+  border-radius: 1em;
+  width: 550px;
+  height: 300px;
  }
 
  .main-page-signup-banner-h2{
