--- a/app/views/tweets/_typebox.html.erb
+++ b/app/views/tweets/_typebox.html.erb
@@ -1,5 +1,1 @@
-<% form_tag(:controller => "tweets", :action => "create") do %>
-  <%= label_tag(:message, "What are you doing?") %><br />
-  <%= text_area_tag(:message, nil, :size => "44x6") %><br /> 
-  <%= submit_tag("Update") %>
-<% end %>
+<%= render partial: "tweets/form" %>  
