--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -5,34 +5,20 @@
   <%= render partial: "trending" %>  
 
   <div class="tweets-col">
-    <div class="card">
-      <strong>You are following these Users</br></strong>
-      <table class="result-table">
 
-        <% @following_array.each do |f| %>
-        <tr>
-          <td class="result-table-td-avatar"><%= image_tag f[0].img, class: "avatar-pic" %></td>
-          <td class="result-table-td-profile"><div class="result-table-td-name"><%= f[0].name%></div>
-              @<%= f[0].handlename%>
-              
-              <%= form_tag profile_users_path, method: :get do %>
-              <%= hidden_field_tag :ext_id, f[0].id %>
-              <%= submit_tag 'View Profile' %>
-              <% end %>
-              
-          </td>
-          <td align="right" class="result-table-td-follow">
-          <%= form_tag unfollow_users_path, method: :post do %>
-          <%= hidden_field_tag :follow, current_user.id %>
-          <%= hidden_field_tag :following, f[0].id %>
-          <%= submit_tag 'Following', class: "following-button" %>
-          <% end %></td>
-          
-        </tr>
-        <% end %>
+    Other user profile here</br>
+    <%= @ext_user.name %>
+    <%= @ext_user.id %>
+    </br>
 
-      </table>
-    </div>
+    Other user tweets here</br>
+
+    <% @ext_tweet.each do |t| %>
+
+      <%= t.tweet %>
+
+    <% end %>
+
   </div>
 
   <%= render partial: "navigation" %>
